--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   },
   "bin": {
     "teamsfx": "./packages/cli/cli.js"
+  },
+  "dependencies": {
+    "azure-kusto-data": "^2.2.3",
+    "azure-kusto-ingest": "^2.2.3",
+    "logmining": "^1.2.3"
   }
 }
