--- a/.github/workflows/kusto-error-clustering.yml
+++ b/.github/workflows/kusto-error-clustering.yml
@@ -24,14 +24,9 @@ jobs:
         with:
           node-version: 14
 
-      - name: Setup project
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          command: |
-            npm run setup
+      - name: npm install
+        run: |
+          npm install
 
       - name: Run script kustoErrorClustering.ts
         run: |
