fix(vsc): align Teams command and readme

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -347,7 +347,7 @@
       },
       {
         "command": "fx-extension.provision",
-        "title": "Teams: Provision in the could"
+        "title": "Teams: Provision in the cloud"
       },
       {
         "command": "fx-extension.deploy",
