--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -58,8 +58,8 @@ jobs:
           VAR=$(git diff --cached --name-only)
           if [ ! -z "$VAR" ]
           then 
-            echo "There may be some unformatted files in your PR, please run these commands on Git Bash terminal: \
-            1. VAR=$(realpath .github/scripts/lint-pr.sh) \
-            2. npx lerna exec -- bash $VAR ${your-PR-target-branch}"
+            echo "There may be some unformatted files such as $VAR in your PR, please run these commands on Git Bash terminal: "
+            echo "1. FILEPATH=$(realpath .github/scripts/lint-pr.sh)"
+            echo "2. npx lerna exec -- bash $FILEPATH ${your-PR-target-branch}"
             exit 1
           fi
