--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -58,8 +58,10 @@ jobs:
           VAR=$(git diff --cached --name-only)
           if [ ! -z "$VAR" ]
           then 
-            echo "There may be some unformatted files in your PR, please run these commands on Git Bash terminal: \
-            1. VAR=$(realpath .github/scripts/lint-pr.sh) \
-            2. npx lerna exec -- bash $VAR ${your-PR-target-branch}"
+            echo 'There may be some unformatted files in your PR, please run these commands on Git Bash terminal: '
+            echo '1. npm run setup'
+            echo '2. VAR=$(realpath .github/scripts/lint-pr.sh) '
+            echo '3. npx lerna exec -- bash $VAR ${your-PR-target-branch}'
+            echo 'please replace the ${your-PR-target-branch} as your PR's target branch, such as origin/dev or upstream/dev'
             exit 1
           fi
