--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -58,7 +58,8 @@ jobs:
           VAR=$(git diff --cached --name-only)
           if [ ! -z "$VAR" ]
           then 
-            echo 'There are some unformatted files in your PR, please run the following commands on Git Bash terminal: '
+            echo '======================================= Prompt Information ==============================================='
+            echo 'There may be some unformatted files in your PR, please run these commands on Git Bash terminal: '
             echo '1. npm run setup'
             echo '2. VAR=$(realpath .github/scripts/lint-pr.sh) '
             echo '3. npx lerna exec -- bash $VAR ${your-PR-target-branch}'
