--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -83,6 +83,14 @@
       {
         "view": "teamsfx-empty-project",
         "contents": "To start Teams app development experience, create a new Teams app or explore our samples. For more information visit our [documentation](https://docs.microsoft.com/en-us/microsoftteams/platform/get-started/first-app-react?tabs=vscode).\n[Create a new Teams app](command:fx-extension.create)\n[View samples](command:fx-extension.openSamples)\n\n\n\n\n\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)"
+      },
+      {
+        "view": "teamsfx-empty-project-top",
+        "contents": "The Teams Toolkit helps developers create and deploy Teams apps with integrated Identity, access to cloud storage, data from [Microsoft Graph](https://docs.microsoft.com/en-us/graph/teams-concept-overview), and other services in [Azure](https://docs.microsoft.com/en-us/microsoftteams/platform/build-your-first-app/build-bot) and [M365](https://docs.microsoft.com/en-us/microsoftteams/platform/concepts/build-and-test/prepare-your-o365-tenant) with a 'zero-configuration' approach to the developer experience.\n[Quick Start](command:fx-extension.openWelcome)\nTo start Teams app development experience, create a new Teams app or explore our samples. For more information visit our [documentation](https://docs.microsoft.com/en-us/microsoftteams/platform/get-started/first-app-react?tabs=vscode).\n[Create a new Teams app](command:fx-extension.create)\n[View samples](command:fx-extension.openSamples)\n\n\n\n\n\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)"
+      },
+      {
+        "view": "teamsfx-empty-project-bottom",
+        "contents": "To start Teams app development experience, create a new Teams app or explore our samples. For more information visit our [documentation](https://docs.microsoft.com/en-us/microsoftteams/platform/get-started/first-app-react?tabs=vscode).\n[Create a new Teams app](command:fx-extension.create)\n[View samples](command:fx-extension.openSamples)\n\n\n\n\n\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)\nThe Teams Toolkit helps developers create and deploy Teams apps with integrated Identity, access to cloud storage, data from [Microsoft Graph](https://docs.microsoft.com/en-us/graph/teams-concept-overview), and other services in [Azure](https://docs.microsoft.com/en-us/microsoftteams/platform/build-your-first-app/build-bot) and [M365](https://docs.microsoft.com/en-us/microsoftteams/platform/concepts/build-and-test/prepare-your-o365-tenant) with a 'zero-configuration' approach to the developer experience.\n[Quick Start](command:fx-extension.openWelcome)"
       }
     ],
     "views": {
@@ -90,7 +98,7 @@
         {
           "id": "teamsfx-accounts",
           "name": "Accounts",
-          "when": "!fx-extension.sidebarWelcome"
+          "when": "!fx-extension.sidebarWelcome || fx-extension.sidebarWelcome.treeview"
         },
         {
           "id": "teamsfx-environment",
@@ -100,34 +108,44 @@
         {
           "id": "teamsfx-development",
           "name": "Development",
-          "when": "!fx-extension.sidebarWelcome && !fx-extension.customizedTreeview"
+          "when": "(!fx-extension.sidebarWelcome || fx-extension.sidebarWelcome.treeview) && !fx-extension.customizedTreeview"
         },
         {
           "type": "webview",
           "id": "teamsfx-development-webview",
           "name": "Development",
-          "when": "!fx-extension.sidebarWelcome && fx-extension.customizedTreeview"
+          "when": "(!fx-extension.sidebarWelcome || fx-extension.sidebarWelcome.treeview) && fx-extension.customizedTreeview"
         },
         {
           "id": "teamsfx-deployment",
           "name": "Deployment",
-          "when": "!fx-extension.sidebarWelcome && !fx-extension.customizedTreeview"
+          "when": "(!fx-extension.sidebarWelcome || fx-extension.sidebarWelcome.treeview) && !fx-extension.customizedTreeview"
         },
         {
           "type": "webview",
           "id": "teamsfx-deployment-webview",
           "name": "Deployment",
-          "when": "!fx-extension.sidebarWelcome && fx-extension.customizedTreeview"
+          "when": "(!fx-extension.sidebarWelcome || fx-extension.sidebarWelcome.treeview) && fx-extension.customizedTreeview"
         },
         {
           "id": "teamsfx-help-and-feedback",
           "name": "Help and feedback",
-          "when": "!fx-extension.sidebarWelcome"
+          "when": "!fx-extension.sidebarWelcome || fx-extension.sidebarWelcome.treeview"
         },
         {
           "id": "teamsfx-empty-project",
           "name": "Teams Toolkit",
-          "when": "fx-extension.sidebarWelcome"
+          "when": "fx-extension.sidebarWelcome && fx-extension.sidebarWelcome.default"
+        },
+        {
+          "id": "teamsfx-empty-project-top",
+          "name": "Teams Toolkit",
+          "when": "fx-extension.sidebarWelcome && fx-extension.sidebarWelcome.top"
+        },
+        {
+          "id": "teamsfx-empty-project-bottom",
+          "name": "Teams Toolkit",
+          "when": "fx-extension.sidebarWelcome && fx-extension.sidebarWelcome.bottom"
         }
       ]
     },
