test(core): refactor core's UT for hooks.test.ts compatible to API V2 and Multi-Env (#2503)
* test(core): adjust api v2 for hook.test.ts

* test(solution): ut

* test(core): refactor ut

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -21,6 +21,7 @@
     "test:unit": "nyc mocha \"tests/**/*.test.ts\"",
     "test:solution": "nyc mocha \"tests/plugins/solution/*.test.ts\"",
     "test:core": "nyc mocha \"tests/core/*.test.ts\"",
+    "test:core-mw": "nyc mocha \"tests/core/middleware/EnvInfoMW.test.ts\"",
     "test:apiv2": "nyc mocha \"tests/plugins/resource/apiv2/*.test.ts\"",
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
