--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -573,9 +573,9 @@
       {
         "title": "Teams Toolkit",
         "properties": {
-          "fx-extension.armSupportEnabled": {
+          "fx-extension.insiderPreview": {
             "type": "boolean",
-            "description": "Enable provision Azure resources with ARM templates. (Requires reload of VS Code)",
+            "description": "Enable insider preview features. (requires reload of VS Code)",
             "default": false
           },
           "fx-extension.multipleEnvironmentsSupportEnabled": {
@@ -601,7 +601,7 @@
           "fx-extension.validateBicep": {
             "type": "boolean",
             "description": "Ensure Bicep CLI is installed.",
-            "default": false
+            "default": true
           },
           "fx-extension.stopTeamsToolkitTasksPostDebug": {
             "type": "boolean",
