fix(core): change env name: TEAMSFX_MULTI_ENV->TEAMSFX_INSIDER_PREVIEW

--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -98,7 +98,7 @@
         "email.address"
       ],
       "env": {
-        "TEAMSFX_MULTI_ENV": "true"
+        "TEAMSFX_INSIDER_PREVIEW": "true"
       },
       "outFiles": [
         "${workspaceFolder}/lib/**/*.js",
