--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0"
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.2.1"
   }
 }
