--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -71,6 +71,7 @@
     "copyfiles": "^2.4.1",
     "css-loader": "^5.2.5",
     "eslint": "^7.9.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.3.1",
     "jsonschema": "^1.4.0",
     "lint-staged": "^10.5.4",
@@ -78,6 +79,7 @@
     "mocha-junit-reporter": "^2.0.0",
     "nyc": "^15.1.0",
     "path-browserify": "^1.0.1",
+    "prettier": "^2.4.1",
     "sass-loader": "^11.1.1",
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
@@ -136,9 +138,6 @@
   "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
       "npx eslint --cache --fix --quiet"
-    ],
-    "*": [
-      "npx prettier --config .prettierrc.js --ignore-unknown --write --ignore-path .prettierignore "
     ]
   }
 }
