--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,7 +6,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.2.1"
+    "eslint-config-prettier": "^8.3.0"
   }
 }
