--- a/templates/package.json
+++ b/templates/package.json
@@ -12,7 +12,9 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^10.5.4",
+    "prettier": "^2.4.1",
     "react-scripts": "^4.0.3",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
