fix: download tag list when no local tag found or wrong inputs

--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -26,7 +26,7 @@
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "prepare": "npm run build && git tag --list | node ./scripts/download-templates-zip.js",
+    "prepare": "npm run build && node ./scripts/download-templates-zip.js $(git tag --list)",
     "prepublishOnly": "npm run test:unit && npm run build",
     "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
     "precommit": "lint-staged"
