--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0"
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint-config-prettier": "^8.3.0"
   }
 }
