--- a/packages/failpoint-ts/package.json
+++ b/packages/failpoint-ts/package.json
@@ -35,9 +35,11 @@
     "@typescript-eslint/parser": "^4.19.0",
     "chai": "^4.3.4",
     "eslint": "^7.22.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "lint-staged": "^10.5.4",
     "mocha": "^9.0.2",
     "nyc": "^15.1.0",
+    "prettier": "^2.4.1",
     "ts-node": "^10.1.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -47,9 +49,6 @@
   "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
       "npx eslint --cache --fix --quiet"
-    ],
-    "*": [
-      "npx prettier --config .prettierrc.js --ignore-unknown --write --ignore-path .prettierignore "
     ]
   }
 }
