--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -704,6 +704,7 @@
     "css-loader": "^5.1.3",
     "decache": "^4.6.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "find-process": "^1.4.4",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.7",
@@ -718,6 +719,7 @@
     "node-loader": "^2.0.0",
     "node-sass": "^6.0.1",
     "nyc": "^15.1.0",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.13.5",
@@ -769,9 +771,6 @@
   "lint-staged": {
     "*.{js,jsx,css,ts,tsx}": [
       "npx eslint --cache --fix --quiet"
-    ],
-    "*": [
-      "npx prettier --config .prettierrc.js --ignore-unknown --write --ignore-path .prettierignore "
     ]
   }
 }
