--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "teamsfx",
   "scripts": {
-    "setup": "npm install && npm run bootstrap --hoist",
+    "setup": "npm install && npm run bootstrap --hoist && npm run install-eslint",
     "setup-failpoint": "npm run setup && npx lerna run build-failpoint",
     "bootstrap": "lerna bootstrap",
+    "install-eslint": "cd packages/eslint-config && npm install",
     "lint:staged": "lerna run lint:staged --stream",
     "lint": "lerna run lint --stream",
     "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog --no-private --ignore-scripts",
