--- a/packages/failpoint-ts/package.json
+++ b/packages/failpoint-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/failpoint-ts",
-  "version": "0.0.2",
+  "version": "0.0.3-rc.0",
   "description": "Fault Injection for TypeScript",
   "keywords": [
     "Fault Injection"
