--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -76,6 +76,7 @@
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
     "reflect-metadata": "^0.1.13",
+    "rpc-websockets": "^7.4.15",
     "semver": "^7.3.4",
     "tedious": "^9.2.1",
     "tslib": "^2.1.0",
