--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,7 @@
         "packages/cli",
         "packages/vscode-extension",
         "packages/failpoint-ts",
+        "packages/server",
         "templates"
     ],
     "command": {
