--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,12 +25,7 @@
 		"watch": "rimraf lib && npm run copy-files && tsc -w -p ./",
 		"package": "rimraf lib && node --max-old-space-size=4096 node_modules/webpack/bin/webpack.js --mode production --config ./webpack.config.js",
 		"prepack": "npm run package",
-		"test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
-		"test:e2e:clean": "ts-node tests/e2e/clean.ts",
-		"test:e2e:parallel": "mocha --parallel --reporter @mochajs/json-file-reporter \"tests/e2e/**/*.tests.ts\"",
-		"test:e2e:smoke": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/smoke/*.tests.ts\"",
-		"test:e2e:others": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
-		"test:unit": "nyc mocha \"tests/unit/**/*.tests.ts\"",
+		"test:unit": "nyc mocha \"tests/**/*.tests.ts\"",
 		"check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
 		"format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
 		"lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
