--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,7 +25,7 @@
 		"watch": "rimraf lib && npm run copy-files && tsc -w -p ./",
 		"package": "rimraf lib && node --max-old-space-size=4096 node_modules/webpack/bin/webpack.js --mode production --config ./webpack.config.js",
 		"prepack": "npm run package",
-		"test:unit": "nyc mocha \"tests/**/*.tests.ts\"",
+    "test:unit": "nyc mocha \"tests/**/*.test.ts\"",
 		"check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
 		"format": "prettier --write --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
 		"lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
