docs: code owner adjustment

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,17 +11,17 @@
 
 /packages/vscode-extension @1openwindow @HuihuiWu-Microsoft @nliu-ms @jayzhang @LongOddCode
 /packages/vscode-extension/src/commonlib @kimizhu @swatDong @kuojianlu @a1exwang @qinezh @XiaofuHuang @xiaolang124 @meifans @dooriya
-/packages/vscode-extension/src/qm @jayzhang @1openwindow @jiayi-ruan @HuihuiWu-Microsoft @nliu-ms
+/packages/vscode-extension/src/qm @jayzhang @1openwindow  @HuihuiWu-Microsoft @nliu-ms
 /packages/vscode-extension/src/debug @kimizhu @swatDong @kuojianlu @a1exwang @qinezh @XiaofuHuang @xiaolang124 @meifans @dooriya
 /packages/vscode-extension/test/suite/envChecker @kimizhu @swatDong @kuojianlu @a1exwang @qinezh @XiaofuHuang @xiaolang124 @meifans @dooriya
 /packages/vscode-extension/src/resources/Strings.json @timngmsft @1openwindow @HuihuiWu-Microsoft
 
-/packages/cli @chagong @Alive-Fish @jiayi-ruan
+/packages/cli @chagong @Alive-Fish 
 /packages/cli/src/commonlib @kimizhu @swatDong @kuojianlu @a1exwang @qinezh @XiaofuHuang @xiaolang124 @meifans @dooriya
-/packages/cli/src/commonlib/appStudioLoginUserPassword.ts @chagong @Alive-Fish @jiayi-ruan
-/packages/cli/src/commonlib/azureLoginUserPassword.ts @chagong @Alive-Fish @jiayi-ruan
-/packages/cli/src/commonlib/graphLoginUserPassword.ts @chagong @Alive-Fish @jiayi-ruan
-/packages/cli/src/commonlib/common/userPasswordConfig.ts @chagong @Alive-Fish @jiayi-ruan
+/packages/cli/src/commonlib/appStudioLoginUserPassword.ts @chagong @Alive-Fish 
+/packages/cli/src/commonlib/azureLoginUserPassword.ts @chagong @Alive-Fish 
+/packages/cli/src/commonlib/graphLoginUserPassword.ts @chagong @Alive-Fish 
+/packages/cli/src/commonlib/common/userPasswordConfig.ts @chagong @Alive-Fish 
 /packages/cli/src/cmds/preview @swatDong @kuojianlu @qinezh @a1exwang @meifans
 /packages/cli/tests/e2e/aad @KennethBWSong @adashen @SLdragon
 /packages/cli/tests/e2e/collaboration @KennethBWSong @adashen @SLdragon
@@ -39,7 +39,7 @@
 /packages/api @jayzhang @1yefuwang1 @LongOddCode @nliu-ms
 /packages/api/src/schemas @dooriya @qinezh @a1exwang @kimizhu
 
-/packages/sdk @tecton @blackchoey @SLdragon @dilin-MS @wenytang-ms @jiayi-ruan
+/packages/sdk @tecton @blackchoey @SLdragon @dilin-MS @wenytang-ms 
 
 /packages/fx-core/src/core @jayzhang @LongOddCode @1yefuwang1 @nliu-ms
 /packages/fx-core/src/core/middleware/projectMigrator.ts @dooriya @qinezh @a1exwang @meifans @blackchoey @wenytang-ms
@@ -55,8 +55,8 @@
 /packages/fx-core/src/plugins/resource/appstudio @nliu-ms @jayzhang
 /packages/fx-core/tests/plugins/resource/appstudio @nliu-ms @jayzhang
 
-/packages/fx-core/src/plugins/resource/spfx @jiayi-ruan @nliu-ms @jayzhang
-/packages/fx-core/tests/plugins/resource/spfx @jiayi-ruan @nliu-ms @jayzhang
+/packages/fx-core/src/plugins/resource/spfx  @nliu-ms @jayzhang
+/packages/fx-core/tests/plugins/resource/spfx  @nliu-ms @jayzhang
 
 /packages/fx-core/src/plugins/resource/bot @IvanJobs @eriolchan @YitongFeng-git
 /packages/fx-core/tests/plugins/resource/bot @IvanJobs @eriolchan @YitongFeng-git
@@ -88,6 +88,8 @@
 
 /packages/function-extension @adashen @blackchoey @dilin-MS
 
-/packages/dotnet-sdk @tecton @jiayi-ruan @JerryYangKai
+/packages/dotnet-sdk @tecton  @JerryYangKai
 
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
+
+/packages/server @jayzhang @IvanJobs @Alive-Fish 
