--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.7.0-rc.3",
+  "version": "0.7.0",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -101,8 +101,8 @@
     "@azure/core-http": "^1.2.0",
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.0.6",
-    "@microsoft/teamsfx-api": "^0.9.0-rc.1",
-    "@microsoft/teamsfx-core": "^0.9.0-rc.3",
+    "@microsoft/teamsfx-api": "^0.9.0",
+    "@microsoft/teamsfx-core": "^0.9.0",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
