chore: revert cli and extension version to rc for release stable

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.7.0",
+  "version": "0.7.0-rc.3",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
