--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -209,7 +209,12 @@ jobs:
         run: |
           export TEAMSFX_INSIDER_PREVIEW=true
           # replace with this eventually: xvfb-run -a npx lerna run test:unit
-          cd packages/fx-core && xvfb-run -a npx nyc mocha "tests/core/**/*.test.ts" && cd -
+          cd packages/fx-core
+          xvfb-run -a npx nyc mocha \
+            "tests/core/**/*.test.ts" \
+            "tests/plugins/resource/aad/**/*.test.ts" \
+            "tests/plugins/resource/simpleauth/**/*.test.ts"
+          cd -
 
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
