--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -213,7 +213,8 @@ jobs:
           xvfb-run -a npx nyc mocha \
             "tests/core/**/*.test.ts" \
             "tests/plugins/resource/aad/**/*.test.ts" \
-            "tests/plugins/resource/simpleauth/**/*.test.ts"
+            "tests/plugins/resource/simpleauth/**/*.test.ts" \
+            "tests/plugins/resource/frontend/**/*.test.ts"
           cd -
 
           coverages="{}"
