--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -212,6 +212,7 @@ jobs:
           cd packages/fx-core
           xvfb-run -a npx nyc mocha \
             "tests/core/**/*.test.ts" \
+            "tests/plugins/resource/appstudio/**/*.test.ts" \
             "tests/plugins/resource/function/**/*.test.ts" \
             "tests/plugins/resource/aad/**/*.test.ts" \
             "tests/plugins/resource/simpleauth/**/*.test.ts" \
