chore: hide check project upgrade in command palette

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -285,6 +285,10 @@
         {
           "command": "fx-extension.openSurvey",
           "when": "false"
+        },
+        {
+          "command": "fx-extension.checkProjectUpgrade",
+          "when": "fx-extension.canUpgradeToArmAndMultiEnv"
         }
       ]
     },
