--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -214,6 +214,7 @@ jobs:
             "tests/core/**/*.test.ts" \
             "tests/plugins/resource/appstudio/**/*.test.ts" \
             "tests/plugins/resource/function/**/*.test.ts" \
+            "tests/plugins/resource/sql/**/*.test.ts" \
             "tests/plugins/resource/aad/**/*.test.ts" \
             "tests/plugins/resource/simpleauth/**/*.test.ts" \
             "tests/plugins/resource/frontend/**/*.test.ts"
