--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -216,7 +216,8 @@ jobs:
             "tests/plugins/resource/function/**/*.test.ts" \
             "tests/plugins/resource/aad/**/*.test.ts" \
             "tests/plugins/resource/simpleauth/**/*.test.ts" \
-            "tests/plugins/resource/frontend/**/*.test.ts"
+            "tests/plugins/resource/frontend/**/*.test.ts" \
+            "tests/plugins/solution/*.test.ts"
           cd -
 
           coverages="{}"
