test(multi-env): fix CLI UT for multi-env

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -220,6 +220,10 @@ jobs:
             "tests/plugins/resource/frontend/**/*.test.ts"
           cd -
 
+          cd packages/cli
+          xvfb-run -a npm run test:unit
+          cd -
+
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
             coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson total $(jq -cr '.total' $i) '.[$package]= $total')
