--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -218,8 +218,7 @@ jobs:
             "tests/plugins/resource/sql/**/*.test.ts" \
             "tests/plugins/resource/aad/**/*.test.ts" \
             "tests/plugins/resource/simpleauth/**/*.test.ts" \
-            "tests/plugins/resource/frontend/**/*.test.ts" \
-            "tests/plugins/solution/*.test.ts"
+            "tests/plugins/resource/frontend/**/*.test.ts"
           cd -
 
           cd packages/cli
