--- a/docs/cicd_insider/github-cd-template.yml
+++ b/docs/cicd_insider/github-cd-template.yml
@@ -39,17 +39,17 @@ jobs:
       # 'npm ci' is used here to install dependencies and it depends on package-lock.json.
       # If you prefer to use 'npm ci', please make sure to commit package-lock.json first, or just change it to 'npm install'.
       - name: Build the project
-        run: cd tabs && npm ci && npm run build
+        run: cd tabs && npm ci && npm run build && cd -
 
       # Run unit test.
       # Currently, no opinionated solution for unit test provided during scaffolding, so,
       # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
       - name: Run Unit Test
-        run: cd tabs && npm run test
+        run: cd tabs && npm run test && cd -
 
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit necessary files under .fx into the repository.
-      # You should copy content of .fx/publishProfiles/${TEAMSFX_ENV_NAME}.userdata, and save it in the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) which can be refered by the step with name 'Generate userdata'. 
+      # You should copy content of .fx/states/${TEAMSFX_ENV_NAME}.userdata, and save it in the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) which can be refered by the step with name 'Generate userdata'. 
       #- name: Provision hosting environment
       #  uses: OfficeDev/teamsfx-cli-action@v1
       #  with:
@@ -67,13 +67,13 @@ jobs:
       #  uses: actions/upload-artifact@v2
       #  with:
       #    name: defaultUserData
-      #    path: .fx/publishProfiles/staging.userdata
+      #    path: .fx/states/staging.userdata
       
       - name: Generate userdata
         env:
           USERDATA_CONTENT: ${{ secrets.USERDATA_CONTENT }}
         run: |
-          [ ! -z "${USERDATA_CONTENT}" ] && echo "${USERDATA_CONTENT}" > .fx/publishProfiles/${TEAMSFX_ENV_NAME}.userdata
+          [ ! -z "${USERDATA_CONTENT}" ] && echo "${USERDATA_CONTENT}" > .fx/states/${TEAMSFX_ENV_NAME}.userdata
         
       - name: Deploy to hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
