--- a/docs/cicd_insider/github-cd-template.yml
+++ b/docs/cicd_insider/github-cd-template.yml
@@ -61,7 +61,7 @@ jobs:
       #  uses: stefanzweifel/git-auto-commit-action@v4
       #  with:
       #    commit_message: "chore: commit provision configs"
-      #    file_pattern: .fx/env.default.json
+      #    file_pattern: .fx/*
       
       #- name: Upload userdata as artifact
       #  uses: actions/upload-artifact@v2
