--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -111,6 +111,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^9.1.0",
     "got": "^11.8.2",
