--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -71,6 +71,7 @@
     "copyfiles": "^2.4.1",
     "css-loader": "^5.2.5",
     "eslint": "^7.9.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.3.1",
     "jsonschema": "^1.4.0",
