--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -727,6 +727,7 @@
     "css-loader": "^5.1.3",
     "decache": "^4.6.0",
     "eslint": "^7.22.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
     "find-process": "^1.4.4",
     "fs-extra": "^9.0.1",
