chore: align package.zip path

--- a/docs/cicd_insider/github-cd-template.yml
+++ b/docs/cicd_insider/github-cd-template.yml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: appPackage
-          path: appPackage/appPackage.zip
+          path: appPackage/appPackage.staging.zip
 
       - name: Publish Teams App
         uses: OfficeDev/teamsfx-cli-action@v1
